--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -258,11 +258,6 @@ textarea {
 }
 
 a {
-  -moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  -webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  -ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  border-bottom: dotted 1px rgba(160, 160, 160, 0.65);
   color: inherit;
   text-decoration: none;
 }
@@ -1476,12 +1471,7 @@ dl dd {
 
 #content p a,
 #content ul li a {
-  border-bottom: dotted 2px rgba(160, 160, 160, 0.65);
   font-weight: bold;
-}
-
-#content p a:hover {
-  border-bottom-color: transparent;
 }
 
 #content blockquote,
@@ -2617,6 +2607,14 @@ body.is-menu-visible #menu {
 
 #content ul li ul {
   list-style-type: circle;
+}
+
+.toc {
+  background: #f8f8f8;
+  border-radius: 5px;
+  border: solid 1px rgba(160, 160, 160, 0.3);
+  margin: 27px 0 27px 0;
+  padding: 0 15px;
 }
 
 /* Valine */
