--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -2594,7 +2594,7 @@ body.is-menu-visible #menu {
 /* list */
 /* TableofContents */
 #content nav ul {
-  list-style-type: square;
+  list-style-type: none;
 }
 
 #content nav ul li>ul {
@@ -2605,8 +2605,8 @@ body.is-menu-visible #menu {
   list-style-type: circle;
 }
 
-#content ul li ul {
-  list-style-type: circle;
+#content nav ul li ul li ul li>ul {
+  list-style-type: square;
 }
 
 .toc {
