--- a/withdewhua-hugo/css/main.css
+++ b/withdewhua-hugo/css/main.css
@@ -1939,8 +1939,6 @@ body.is-menu-visible #menu {
 
 .toc {
   background: #f8f8f8;
-  border-radius: 5px;
-  border: solid 1px rgba(160, 160, 160, 0.3);
-  margin: 27px 0 27px 0;
-  padding: 0 15px;
+  border: solid 2px #20c997;
+  margin: 2em 0 2em 0;
 }
