--- a/css/main.css
+++ b/css/main.css
@@ -154,18 +154,18 @@ table {
 }
 
 ::selection {
-  background:#20c997; 
-  color:#ffffff;
+  background: #20c997;
+  color: #ffffff;
 }
 
 ::-moz-selection {
-  background:#20c997; 
-  color:#ffffff;
+  background: #20c997;
+  color: #ffffff;
 }
 
 ::-webkit-selection {
-  background:#20c997; 
-  color:#ffffff;
+  background: #20c997;
+  color: #ffffff;
 }
 
 /* Box Model */
@@ -229,7 +229,6 @@ textarea {
 }
 
 @media screen and (max-width: 1680px) {
-
   body,
   input,
   select,
@@ -239,7 +238,6 @@ textarea {
 }
 
 @media screen and (max-width: 1280px) {
-
   body,
   input,
   select,
@@ -249,7 +247,6 @@ textarea {
 }
 
 @media screen and (max-width: 768px) {
-
   body,
   input,
   select,
@@ -259,7 +256,6 @@ textarea {
 }
 
 @media screen and (max-width: 480px) {
-
   body,
   input,
   select,
@@ -497,13 +493,13 @@ hr.major {
 .icon:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
 }
 
-.icon>.label {
+.icon > .label {
   display: none;
 }
 
@@ -521,46 +517,6 @@ hr.major {
 
 .image img {
   display: block;
-}
-
-.image.left,
-.image.right,
-.image.center {
-  max-width: 40%;
-}
-
-.image.left img,
-.image.right img,
-.image.center img {
-  width: 100%;
-}
-
-.image.left {
-  float: left;
-  padding: 0 1.5em 1em 0;
-  top: 0.25em;
-}
-
-.image.right {
-  float: right;
-  padding: 0 0 1em 1.5em;
-  top: 0.25em;
-}
-
-.image.center {
-  display: block;
-  margin: auto;
-  clear: both;
-}
-
-.image.fit {
-  display: block;
-  margin: 0 0 2em 0;
-  width: 100%;
-}
-
-.image.fit img {
-  width: 100%;
 }
 
 .image.featured {
@@ -591,15 +547,6 @@ hr.major {
 
 /* List */
 
-ul.task-list {
-  list-style: none;
-}
-
-.task-list-item {
-  position: relative;
-  top: -1px;
-}
-
 ol {
   list-style: decimal;
   margin: 0 0 2em 0;
@@ -620,21 +567,6 @@ ul li {
   padding-left: 0.25em;
 }
 
-ul.alt {
-  list-style: none;
-  padding-left: 0;
-}
-
-ul.alt li {
-  border-top: solid 1px rgba(160, 160, 160, 0.3);
-  padding: 0.5em 0;
-}
-
-ul.alt li:first-child {
-  border-top: 0;
-  padding-top: 0;
-}
-
 ul.icons {
   cursor: default;
   list-style: none;
@@ -651,255 +583,22 @@ ul.icons li:last-child {
   padding-right: 0;
 }
 
-ul.icons li>* {
+ul.icons li > * {
   text-decoration: none;
   border: 0;
 }
 
-ul.icons li>*:before {
+ul.icons li > *:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
 }
 
-ul.icons li>* .label {
+ul.icons li > * .label {
   display: none;
-}
-
-ul.actions {
-  cursor: default;
-  list-style: none;
-  padding-left: 0;
-}
-
-ul.actions li {
-  display: inline-block;
-  padding: 0 1em 0 0;
-  vertical-align: middle;
-}
-
-ul.actions li:last-child {
-  padding-right: 0;
-}
-
-ul.actions.pagination .button {
-  background: white;
-  line-height: 2.5em;
-  height: auto;
-  white-space: normal;
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
-
-ul.actions.pagination .next {
-  text-decoration: none;
-}
-
-ul.actions.pagination .next:after {
-  content: "";
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Font Awesome 5 Free';
-  font-style: normal;
-  font-weight: 900;
-  text-transform: none !important;
-}
-
-ul.actions.pagination .next:after {
-  content: "\f054";
-}
-
-ul.actions.pagination .previous {
-  text-decoration: none;
-}
-
-ul.actions.pagination .previous:before {
-  content: "";
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Font Awesome 5 Free';
-  font-style: normal;
-  font-weight: 900;
-  text-transform: none !important;
-}
-
-ul.actions.pagination .previous:before {
-  content: "\f053";
-}
-
-@media screen and (max-width: 1280px) {
-  ul.actions.pagination {
-    text-align: center;
-  }
-
-  ul.actions.pagination .next,
-  ul.actions.pagination .previous {
-    min-width: 20em;
-  }
-}
-
-@media screen and (max-width: 768px) {
-
-  ul.actions.pagination .next,
-  ul.actions.pagination .previous {
-    min-width: 18em;
-  }
-}
-
-ul.actions.small li {
-  padding: 0 1em 0 0;
-}
-
-ul.actions.vertical li {
-  display: block;
-  padding: 1.5em 0 0 0;
-}
-
-ul.actions.vertical li:first-child {
-  padding-top: 0;
-}
-
-ul.actions.vertical li>* {
-  margin-bottom: 0;
-}
-
-ul.actions.vertical.small li {
-  padding: 1em 0 0 0;
-}
-
-ul.actions.vertical.small li:first-child {
-  padding-top: 0;
-}
-
-ul.actions.fit {
-  display: table;
-  margin-left: -1em;
-  padding: 0;
-  table-layout: fixed;
-  width: calc(100% + 1em);
-}
-
-ul.actions.fit li {
-  display: table-cell;
-  padding: 0 0 0 1em;
-}
-
-ul.actions.fit li>* {
-  margin-bottom: 0;
-}
-
-ul.actions.fit.small {
-  margin-left: -0.5em;
-  width: calc(100% + 0.5em);
-}
-
-ul.actions.fit.small li {
-  padding: 0 0 0 0.5em;
-}
-
-@media screen and (max-width: 480px) {
-  ul.actions {
-    margin: 0 0 2em 0;
-  }
-
-  ul.actions li {
-    padding: 1em 0 0 0;
-    display: block;
-    text-align: center;
-    width: 100%;
-  }
-
-  ul.actions li:first-child {
-    padding-top: 0;
-  }
-
-  ul.actions li>* {
-    width: 100%;
-    margin: 0 !important;
-  }
-
-  ul.actions.small li {
-    padding: 0.5em 0 0 0;
-  }
-
-  ul.actions.small li:first-child {
-    padding-top: 0;
-  }
-}
-
-ul.posts {
-  list-style: none;
-  padding: 0;
-}
-
-ul.posts li {
-  border-top: dotted 1px rgba(160, 160, 160, 0.3);
-  margin: 0.5em 0 0 0;
-  padding: 0.5em 0 0 0;
-}
-
-ul.posts li:first-child {
-  border-top: 0;
-  margin-top: 0;
-  padding-top: 0;
-}
-
-ul.posts article {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-align-items: -moz-flex-start;
-  -webkit-align-items: -webkit-flex-start;
-  -ms-align-items: -ms-flex-start;
-  align-items: flex-start;
-  -moz-flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-  -ms-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-}
-
-ul.posts article .image {
-  display: block;
-  margin-right: 1.5em;
-  min-width: 4em;
-  width: 4em;
-}
-
-ul.posts article .image img {
-  width: 100%;
-}
-
-ul.posts article header {
-  -moz-flex-grow: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-grow: 1;
-  flex-grow: 1;
-}
-
-ul.posts article header h3 {
-  font-size: 0.7em;
-  margin-top: 0.125em;
-}
-
-ul.posts article header .published {
-  display: block;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia,
-    "source-han-serif-sc", "Source Han Serif SC", "Source Han Serif CN",
-    "Source Han Serif TC", "Source Han Serif TW", "Source Han Serif",
-    "Songti SC", "Microsoft YaHei", serif;
-  font-size: 0.6em;
-  font-weight: 400;
-  letter-spacing: 0.25em;
-  margin: -0.625em 0 1.7em 0;
-  text-transform: uppercase;
-}
-
-ul.posts article header> :last-child {
-  margin-bottom: 0;
 }
 
 dl {
@@ -916,119 +615,6 @@ dl dd {
   margin-left: 2em;
 }
 
-/* Mini Post */
-
-.mini-post {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-flex-direction: column-reverse;
-  -webkit-flex-direction: column-reverse;
-  -ms-flex-direction: column-reverse;
-  flex-direction: column-reverse;
-  background: #ffffff;
-  border: solid 1px rgba(160, 160, 160, 0.3);
-  margin: 0 0 2em 0;
-}
-
-.mini-post .image {
-  overflow: hidden;
-  width: 100%;
-}
-
-.mini-post .image img {
-  -moz-transition: -moz-transform 0.2s ease-out;
-  -webkit-transition: -webkit-transform 0.2s ease-out;
-  -ms-transition: -ms-transform 0.2s ease-out;
-  transition: transform 0.2s ease-out;
-  width: 100%;
-}
-
-.mini-post .image:hover img {
-  -moz-transform: scale(1.05);
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-}
-
-.mini-post .image.featured {
-  margin: 0;
-}
-
-.mini-post header {
-  padding: 1.25em 4.25em 0.1em 1.25em;
-  min-height: 4em;
-  position: relative;
-  -moz-flex-grow: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-grow: 1;
-  flex-grow: 1;
-}
-
-.mini-post header h3 {
-  font-size: 0.7em;
-}
-
-.mini-post header .published {
-  display: block;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia,
-    "source-han-serif-sc", "Source Han Serif SC", "Source Han Serif CN",
-    "Source Han Serif TC", "Source Han Serif TW", "Source Han Serif",
-    "Songti SC", "Microsoft YaHei", serif;
-  font-size: 0.6em;
-  font-weight: 400;
-  letter-spacing: 0.25em;
-  margin: -0.625em 0 1.7em 0;
-  text-transform: uppercase;
-}
-
-.mini-post header .author,
-.mini-post header .format {
-  position: absolute;
-  right: 2em;
-  top: 2em;
-}
-
-.mini-posts {
-  margin: 0 0 2em 0;
-}
-
-@media screen and (max-width: 1280px) {
-  .mini-posts .posts-container {
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -moz-flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .mini-posts .posts-container>* {
-    margin: 2em 0 0 0;
-    width: 24%;
-    margin-top: 0;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .mini-posts .posts-container>* {
-    margin: 0 0 2em 0;
-    width: 49%;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .mini-posts .posts-container>* {
-    margin: 0 0 2em 0;
-    width: 100%;
-  }
-}
-
 /* Post */
 
 .post {
@@ -1039,7 +625,7 @@ dl dd {
   position: relative;
 }
 
-.post>header {
+.post > header {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
@@ -1051,7 +637,7 @@ dl dd {
   width: calc(100% + 6em);
 }
 
-.post>header .title {
+.post > header .title {
   -moz-flex-grow: 1;
   -webkit-flex-grow: 1;
   -ms-flex-grow: 1;
@@ -1059,21 +645,21 @@ dl dd {
   padding: 3.75em 3em 3.3em 3em;
 }
 
-.post>header .title h1 {
+.post > header .title h1 {
   font-weight: 900;
   font-size: 1.5em;
 }
 
-.post>header .title h2 {
+.post > header .title h2 {
   font-weight: 900;
   font-size: 1.5em;
 }
 
-.post>header .title> :last-child {
+.post > header .title > :last-child {
   margin-bottom: 0;
 }
 
-.post>header .meta {
+.post > header .meta {
   padding: 3.75em 3em 1.75em 3em;
   border-left: solid 1px rgba(160, 160, 160, 0.3);
   min-width: 17em;
@@ -1081,15 +667,15 @@ dl dd {
   width: 17em;
 }
 
-.post>header .meta>* {
+.post > header .meta > * {
   margin: 0 0 1em 0;
 }
 
-.post>header .meta> :last-child {
+.post > header .meta > :last-child {
   margin-bottom: 0;
 }
 
-.post>header .meta .published {
+.post > header .meta .published {
   color: #3c3b3b;
   display: block;
   font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia,
@@ -1126,77 +712,22 @@ code {
   margin: 1em 0;
 }
 
-.post>.image.featured {
+.post > .image.featured {
   overflow: hidden;
 }
 
-.post>.image.featured img {
+.post > .image.featured img {
   -moz-transition: -moz-transform 0.2s ease-out;
   -webkit-transition: -webkit-transform 0.2s ease-out;
   -ms-transition: -ms-transform 0.2s ease-out;
   transition: transform 0.2s ease-out;
 }
 
-.post>.image.featured:hover img {
+.post > .image.featured:hover img {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
-}
-
-.post>footer {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-}
-
-.post>footer .actions {
-  -moz-flex-grow: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-grow: 1;
-  flex-grow: 1;
-}
-
-.post>footer .stats {
-  cursor: default;
-  list-style: none;
-  padding: 0;
-}
-
-.post>footer .stats li,
-.post>footer .stats li ul {
-  margin: 0;
-  padding-left: 0;
-}
-
-.post>footer .stats li ul li {
-  border-left: solid 1px rgba(160, 160, 160, 0.3);
-  display: inline-block;
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia,
-    "source-han-serif-sc", "Source Han Serif SC", "Source Han Serif CN",
-    "Source Han Serif TC", "Source Han Serif TW", "Source Han Serif",
-    "Songti SC", "Microsoft YaHei", serif;
-  font-size: 0.6em;
-  font-weight: 400;
-  letter-spacing: 0.25em;
-  line-height: 1;
-  margin: 0 0 0 1em;
-  padding: 0 0 0 1em;
-  text-transform: uppercase;
-}
-
-.post>footer .stats li ul li .icon {
-  border-bottom: 0;
-}
-
-.post>footer .stats li ul li .icon:before {
-  color: rgba(160, 160, 160, 0.3);
-  margin-right: 0.75em;
 }
 
 @media screen and (max-width: 1280px) {
@@ -1207,7 +738,7 @@ code {
     width: calc(100% + (3em * 2));
   }
 
-  .post>header {
+  .post > header {
     -moz-flex-direction: column;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
@@ -1216,14 +747,14 @@ code {
     border-left: 0;
   }
 
-  .post>header .title {
+  .post > header .title {
     flex: 0 1 auto;
     margin: 0 0 2em 0;
     padding: 0;
     text-align: center;
   }
 
-  .post>header .meta {
+  .post > header .meta {
     -moz-align-items: center;
     -webkit-align-items: center;
     -ms-align-items: center;
@@ -1244,24 +775,24 @@ code {
     width: 100%;
   }
 
-  .post>header .meta>* {
+  .post > header .meta > * {
     border-left: solid 1px rgba(160, 160, 160, 0.3);
     margin-left: 2em;
     padding-left: 2em;
   }
 
-  .post>header .meta> :first-child {
+  .post > header .meta > :first-child {
     border-left: 0;
     margin-left: 0;
     padding-left: 0;
   }
 
-  .post>header .meta .published {
+  .post > header .meta .published {
     margin-bottom: 0;
     margin-top: 0;
   }
 
-  .post>header .meta .author {
+  .post > header .meta .author {
     -moz-flex-direction: row-reverse;
     -webkit-flex-direction: row-reverse;
     -ms-flex-direction: row-reverse;
@@ -1269,11 +800,11 @@ code {
     margin-bottom: 0;
   }
 
-  .post>header .meta .author .name {
+  .post > header .meta .author .name {
     margin: 0 0 0 1.5em;
   }
 
-  .post>header .meta .author img {
+  .post > header .meta .author img {
     width: 3.5em;
   }
 }
@@ -1286,24 +817,24 @@ code {
     width: calc(100% + (1.5em * 2));
   }
 
-  .post>header {
+  .post > header {
     padding: 3em 1.5em 0.5em 1.5em;
     left: -1.5em;
     margin: -1.5em 0 1.5em 0;
     width: calc(100% + 3em);
   }
 
-  .post>header .title h1 {
+  .post > header .title h1 {
     font-size: 1.1em;
   }
 
-  .post>header .title h2 {
+  .post > header .title h2 {
     font-size: 1.1em;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .post>header .meta {
+  .post > header .meta {
     -moz-align-items: center;
     -webkit-align-items: center;
     -ms-align-items: center;
@@ -1314,23 +845,23 @@ code {
     flex-direction: column;
   }
 
-  .post>header .meta>* {
+  .post > header .meta > * {
     border-left: 0;
     margin: 1em 0 0 0;
     padding-left: 0;
   }
 
-  .post>header .meta .author .name {
+  .post > header .meta .author .name {
     display: none;
   }
 
-  .post>.image.featured {
+  .post > .image.featured {
     margin-left: -1.5em;
     margin-top: 0;
     width: calc(100% + 3em);
   }
 
-  .post>footer {
+  .post > footer {
     -moz-align-items: stretch;
     -webkit-align-items: stretch;
     -ms-align-items: stretch;
@@ -1341,11 +872,11 @@ code {
     flex-direction: column-reverse;
   }
 
-  .post>footer .stats {
+  .post > footer .stats {
     text-align: center;
   }
 
-  .post>footer .stats li ul li {
+  .post > footer .stats li ul li {
     margin: 0 0 0 1.25em;
     padding: 0 0 0 1.25em;
   }
@@ -1493,12 +1024,12 @@ body {
   white-space: nowrap;
 }
 
-#header .main ul li>* {
+#header .main ul li > * {
   display: block;
   float: left;
 }
 
-#header .main ul li>a {
+#header .main ul li > a {
   text-decoration: none;
   border-bottom: 0;
   color: #aaaaaa;
@@ -1520,16 +1051,16 @@ body {
   opacity: 0.35;
 }
 
-#header .main ul li>a:before {
+#header .main ul li > a:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
 }
 
-#header .main ul li>a:before {
+#header .main ul li > a:before {
   display: block;
   height: inherit;
   left: 0;
@@ -1677,32 +1208,16 @@ body.is-menu-visible #wrapper {
   width: 22em;
 }
 
-#sidebar>* {
+#sidebar > * {
   border-top: solid 1px rgba(160, 160, 160, 0.3);
   margin: 3em 0 0 0;
   padding: 3em 0 0 0;
 }
 
-#sidebar> :first-child {
+#sidebar > :first-child {
   border-top: 0;
   margin-top: 0;
   padding-top: 0;
-}
-
-#sidebar #mini-bio p {
-  /* Theoretically for IE 8 & 9 (more valid) */
-  /* ...but not required as filter works too */
-  /* should come BEFORE filter */
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
-
-  /* This works in IE 8 & 9 too */
-  /* ... but also 5, 6, 7 */
-  filter: alpha(opacity=65);
-
-  /* Modern Browsers */
-  opacity: 0.65;
-  font-size: 0.9em;
-  padding: 0;
 }
 
 @media screen and (max-width: 1280px) {
@@ -1800,7 +1315,7 @@ body.is-menu-visible #wrapper {
     padding: 1.25em 0;
   }
 
-  #intro> :last-child {
+  #intro > :last-child {
     margin-bottom: 0;
   }
 
@@ -1812,7 +1327,7 @@ body.is-menu-visible #wrapper {
     font-size: 1.25em;
   }
 
-  #intro header> :last-child {
+  #intro header > :last-child {
     margin-bottom: 0;
   }
 }
@@ -1841,81 +1356,6 @@ body.is-menu-visible #wrapper {
   visibility: hidden;
   width: 25em;
   z-index: 10002;
-}
-
-#menu>* {
-  border-top: solid 1px rgba(160, 160, 160, 0.3);
-  padding: 3em;
-}
-
-#menu>*> :last-child {
-  margin-bottom: 0;
-}
-
-#menu> :first-child {
-  border-top: 0;
-}
-
-#menu .links {
-  list-style: none;
-  padding: 0;
-}
-
-#menu .links>li {
-  border: 0;
-  border-top: dotted 1px rgba(160, 160, 160, 0.3);
-  margin: 1.5em 0 0 0;
-  padding: 1.5em 0 0 0;
-}
-
-#menu .links>li a {
-  display: block;
-  border-bottom: 0;
-}
-
-#menu .links>li a h3 {
-  -moz-transition: color 0.2s ease;
-  -webkit-transition: color 0.2s ease;
-  -ms-transition: color 0.2s ease;
-  transition: color 0.2s ease;
-  font-size: 0.7em;
-}
-
-#menu .links>li a p {
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia,
-    "source-han-serif-sc", "Source Han Serif SC", "Source Han Serif CN",
-    "Source Han Serif TC", "Source Han Serif TW", "Source Han Serif",
-    "Songti SC", "Microsoft YaHei", serif;
-  font-size: 0.6em;
-  font-weight: 400;
-  letter-spacing: 0.25em;
-  margin-bottom: 0;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-#menu .links>li a:hover h3 {
-  color: #2ebaae;
-}
-
-#menu .links>li:first-child {
-  border-top: 0;
-  margin-top: 0;
-  padding-top: 0;
-}
-
-body.is-menu-visible #menu {
-  -moz-transform: translateX(0);
-  -webkit-transform: translateX(0);
-  -ms-transform: translateX(0);
-  transform: translateX(0);
-  visibility: visible;
-}
-
-@media screen and (max-width: 768px) {
-  #menu>* {
-    padding: 1.5em;
-  }
 }
 
 /* featured-tags */
