--- a/css/main.css
+++ b/css/main.css
@@ -493,7 +493,7 @@ hr.major {
 .icon:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
+  font-family: "iconfont";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
@@ -591,7 +591,7 @@ ul.icons li > * {
 ul.icons li > *:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
+  font-family: "iconfont";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
@@ -1054,7 +1054,7 @@ body {
 #header .main ul li > a:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free";
+  font-family: "iconfont";
   font-style: normal;
   font-weight: 900;
   text-transform: none !important;
